# braingame.xyz

./: .gitignore  .travis.yml  Dockerrun.aws.json  README.md  codecov.yml  docker-compose.yml
.ebextensions/: alb-http-to-https-redirection-full.config
backend/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/backend/: anagram.py  app.py  app_dev.py  app_prod.py  file_paths.py  load_words.py  process_words.py
backend/tests/: test_app.py  test_brain_game_backend.py  test_file_paths.py  test_load_words.py
brain-game-backend/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
brain-game-backend/brain_game_backend/: app_dev.py
brain-game-frontend/: Dockerfile.dev
frontend/: Dockerfile.prod  package.json
frontend/nginx/: default.conf
frontend/src/: App.js
frontend/src/components/: ActionButton.css  ActionButton.js  Anagram.css  Anagram.js  AnagramGame.css  AnagramGame.js  Answers.css  Answers.js  App.js  App.test.js  Counter.css  Counter.js  GuessForm.css  GuessForm.js  Header.css  Header.js  LengthSelector.css  LengthSelector.js  Score.css  Score.js  Status.js  Word.css  Word.js  Word.test.js
frontend/src/components/ActionButton/: ActionButton.css  ActionButton.js
frontend/src/components/Anagram/: Anagram.css  Anagram.js  AnagramGame.js  AnagramStyles.js
frontend/src/components/AnagramGame/: AnagramGame.js  Game.css
frontend/src/components/Answers/: Answers.css  Answers.js
frontend/src/components/App/: App.js  App.test.js
frontend/src/components/Counter/: Counter.css  Counter.js  Counter.test.js
frontend/src/components/Game/: Game.js
frontend/src/components/GameLink/: GameLink.js  Links.js
frontend/src/components/Home/: Home.js  (+1 more)
frontend/src/styles/: HeaderStyled.js  PageBodyStyled.js  PageDesign.js  TitleStyled.js
nginx/: default.conf
(+10 files in other folders)
