[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["James Thomas <codeactor@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-restful = "^0.3.8"
waitress = "^1.4.3"
cachetools = "^4.1.0"
pyfunctory = {git = "https://github.com/jgthomas/pyfunctory"}
fastapi = "^0.61.2"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.17.0"
black = "^19.10b0"
flake8 = "^3.8.2"
pre-commit = "^2.4.0"
pytest-cov = "^2.10.1"
codecov = "^2.1.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
